[project]
name = "flow-py-sdk"
version = "0.1.0"
description = "A python SKD for the flow blockchain"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "betterproto[compiler]==v2.0.0-beta5",
    "ecdsa==0.18",
    "rlp==3.0",
    "toml",
    "coloredlogs",
    "grpclib>=0.4",
    "importlib-resources==1.0.2",
    "typing_extensions>=4.5.0",
]

# [tool.poetry.dependencies]
# betterproto = {extras = ["compiler"], version = "v2.0.0-beta5"}
# ecdsa = "^v0.18"
# rlp = "^3.0"
# grpclib = "^0.4"
# importlib-resources = "1.0.2"

[project.optional-dependencies]
dev = [
    "black",
]
test = [
    "pytest",
    "coverage",

]
docs = [
    "coloredlogs",
    "toml",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project.scripts]
examples = 'examples.main:run'
